# dira-igad

./: .env.example  .gitignore  .importlinter  AGENTS.md  CLAUDE.md  DEVIATIONS.md  DIRA-SPEC.md  Makefile  README.md  alembic.ini  conftest.py  importlinter.ini  pyproject.toml
apps/api/: pyproject.toml
apps/api/dira_api/: __init__.py  context_routes.py  deps.py  main.py  schemas.py  settings.py  sse.py
apps/web/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
apps/web/src/: App.css  App.tsx  index.css  main.tsx
apps/web/src/components/: charts.tsx  ui.tsx
apps/web/src/features/advisor/: AdvisorPanel.tsx  AskAdvisor.tsx  index.ts
apps/web/src/features/dispatch/: DispatchPanel.tsx  index.ts
apps/web/src/features/economy/: EconomyPanel.tsx
apps/web/src/features/map/: MapView.tsx  geometry.ts  index.ts  useMapLayers.ts
apps/web/src/features/queue/: ZoneQueue.tsx  index.ts
apps/web/src/features/situations/: SignalsList.tsx  TabiriCard.tsx  index.ts
apps/web/src/hooks/: queries.ts
apps/web/src/lib/: api.ts  color.ts  format.ts  sse.test.ts  sse.ts  ssePatch.test.ts  ssePatch.ts  types.ts
apps/web/src/screens/: AnalyticsScreen.tsx  DispatchScreen.tsx  MapScreen.tsx  SituationDetailScreen.tsx  SituationsScreen.tsx  SourcesScreen.tsx  ZoneDossierScreen.tsx  ZonesScreen.tsx
apps/web/src/stores/: mapUi.test.ts  mapUi.ts
apps/worker/: pyproject.toml
apps/worker/dira_worker/: __init__.py  cycle.py  dispatch.py  features_io.py  paths.py  pipeline.py  seed.py  settings.py  stages_late.py
artifacts/: README.md  model_card.json  model_v1.bundle.joblib
data/seeded/audio/: README.md
data/seeded/audio/sw/: alert_generic.txt
data/seeded/economy/: indicators.json
data/seeded/igad/: displacement.json  field_reports.json  food_security.json  hazard_bulletins.json  health.json  market_prices.json  news_articles.json  recipients.json  zone_admin_map.json
data/seeded/igad/acled/: events.json
data/seeded/igad/climate/: climate.json
data/seeded/igad/exposure/: exposure.json
data/seeded/igad/geojson/: clusters.json  zones.geojson
data/seeded/mandera/: README.md  acled.csv  climate_dekadal.csv  exposure.json  news.json  recipients.json  zones.geojson
data/seeded/mandera/acled/: events.json
data/seeded/mandera/climate/: climate.json
data/seeded/mandera/exposure/: exposure.json
data/seeded/mandera/geojson/: cluster.json  zones.geojson
data/seeded/news/: README.md
data/seeded/news/corpus/: articles.json
docs/: IMPLEMENTATION.md  dira-architecture.md  dira-project-report.md  dira-specification.md
docs/adr/: README.md
infra/: Dockerfile.api  Dockerfile.db  Dockerfile.web  Dockerfile.worker  alembic.ini  docker-compose.yml  init-vector.sh
infra/alembic/: env.py
infra/alembic/versions/: 0001_init.py  0001_schema_v2.py  0002_information_layer.py
infra/migrations/: 001_init.sql  001_scaffold.sql
scripts/: bootstrap.py  demo.py  gen_fixtures.py  generate_igad_fixtures.py  train.py
tests/: conftest.py  test_m0_schema.py  test_m2_bootstrap.py  test_m3_pipeline_e1_e2.py  test_m4_ml.py  test_m5_pipeline.py  test_m6_api.py  test_m7_dispatch.py
tests/integration/: test_api_dispatch.py  test_climate_fww.py  test_context_api.py  test_pipeline_invariants.py  test_schema_constraints.py
