[project]
name = "dira"
version = "0.1.0"
description = "Dira — causal situation room for the Horn of Africa (IGAD Husika Hackathon 2026)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "ruff>=0.8",
  "mypy>=1.13",
  "httpx>=0.28",
  "alembic>=1.14",
  "import-linter>=2.1",
  "psycopg[binary,pool]>=3.2",
]

[tool.uv.workspace]
members = [
  "packages/dira_core",
  "packages/dira_features",
  "packages/dira_data",
  "packages/dira_ml",
  "packages/dira_llm",
  "packages/dira_dispatch",
  "apps/api",
  "apps/worker",
]

[tool.uv.sources]
dira-core = { workspace = true }
dira-features = { workspace = true }
dira-data = { workspace = true }
dira-ml = { workspace = true }
dira-llm = { workspace = true }
dira-dispatch = { workspace = true }
dira-api = { workspace = true }
dira-worker = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["packages", "apps", "tests"]
asyncio_mode = "auto"
markers = [
  "integration: requires real Postgres",
]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["dira_core", "dira_features"]

[tool.coverage.run]
source = ["dira_core"]
branch = true

[tool.coverage.report]
fail_under = 95
show_missing = true

[tool.importlinter]
root_packages = ["dira_core", "dira_features", "dira_data", "dira_ml", "dira_llm", "dira_dispatch"]

[[tool.importlinter.contracts]]
name = "dira_core stays dependency-free"
type = "forbidden"
source_modules = ["dira_core"]
forbidden_modules = ["dira_data", "dira_ml", "dira_llm", "dira_dispatch", "dira_features"]
