[project]
name = "dira-worker"
version = "0.1.0"
description = "Pipeline worker (dekadal cycle) and dispatch daemon."
requires-python = ">=3.11"
dependencies = [
  "dira-core",
  "dira-features",
  "dira-data",
  "dira-ml",
  "dira-llm",
  "dira-dispatch",
  "pydantic-settings>=2.6",
  "psycopg[binary,pool]>=3.2",
]

[project.scripts]
dira-pipeline = "dira_worker.pipeline:main"
dira-dispatch = "dira_worker.dispatch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dira_worker"]
